--- a/src/scss/06_components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/06_components/paragraphs/_liftup-with-image.scss
@@ -100,6 +100,8 @@ $breakpoint-design-image-on-left-right: 830px;
     color: var(--hdbt-color-palette-text--primary);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'],[data-hds-variant]),
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='primary'],
   .hds-button--primary {
     --background-color: var(--hdbt-color-palette-button--primary);
     --background-color-hover: transparent;
@@ -120,6 +122,7 @@ $breakpoint-design-image-on-left-right: 830px;
     --submit-input-focus-gutter-color: var(--hdbt-color-palette-button-contrast--primary);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='secondary'],
   .hds-button--secondary {
     --background-color: transparent;
     --background-color-hover: var(--hdbt-color-palette-button--primary);
@@ -138,6 +141,7 @@ $breakpoint-design-image-on-left-right: 830px;
     --focus-outline-color: var(--hdbt-color-palette-button--primary);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='supplementary'],
   .hds-button--supplementary {
     --background-color: transparent;
     --background-color-hover: transparent;
@@ -172,6 +176,8 @@ $breakpoint-design-image-on-left-right: 830px;
     color: var(--hdbt-color-palette-text--secondary);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'],[data-hds-variant]),
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='primary'],
   .hds-button--primary {
     --background-color: var(--hdbt-color-palette-button--secondary);
     --background-color-hover: transparent;
@@ -192,6 +198,7 @@ $breakpoint-design-image-on-left-right: 830px;
     --submit-input-focus-gutter-color: var(--hdbt-color-palette-button-contrast--secondary);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='secondary'],
   .hds-button--secondary {
     --background-color: transparent;
     --background-color-hover: var(--hdbt-color-palette-button--secondary);
@@ -210,6 +217,7 @@ $breakpoint-design-image-on-left-right: 830px;
     --focus-outline-color: var(--hdbt-color-palette-button--secondary);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='supplementary'],
   .hds-button--supplementary {
     --background-color: transparent;
     --background-color-hover: transparent;
@@ -400,6 +408,8 @@ $breakpoint-design-image-on-left-right: 830px;
     --hdbt-default-link-color: var(--color-black);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'],[data-hds-variant]),
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='primary'],
   .hds-button--primary {
     --background-color: var(--color-black-90);
     --background-color-hover: var(--color-white);
@@ -420,6 +430,7 @@ $breakpoint-design-image-on-left-right: 830px;
     --submit-input-focus-gutter-color: var(--color-white);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='secondary'],
   .hds-button--secondary {
     --background-color: transparent;
     --background-color-hover: var(--color-black-90);
@@ -438,6 +449,7 @@ $breakpoint-design-image-on-left-right: 830px;
     --focus-outline-color: var(--color-black-90);
   }
 
+  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='supplementary'],
   .hds-button--supplementary {
     --background-color: transparent;
     --background-color-hover: transparent;
