UHF-9050: Reduce repetition on palette definitions

--- a/src/scss/06_components/paragraphs/_banner.scss
+++ b/src/scss/06_components/paragraphs/_banner.scss
@@ -100,67 +100,7 @@ a.banner__button {
     --hdbt-default-link-color: var(--hdbt-color-palette-text--primary);
   }
 
-  [data-hds-component='button']:not([class*='hds-button'],[data-hds-variant]),
-  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='primary'],
-  .hds-button--primary {
-    --background-color: var(--hdbt-color-palette-button--primary);
-    --background-color-hover: transparent;
-    --background-color-focus: var(--hdbt-color-palette-button--primary);
-    --background-color-hover-focus: transparent;
-    --background-color-disabled: var(--color-black-20);
-    --border-color: var(--hdbt-color-palette-button--primary);
-    --border-color-hover: var(--hdbt-color-palette-button--primary);
-    --border-color-focus: var(--hdbt-color-palette-button--primary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--primary);
-    --border-color-disabled: var(--color-black-20);
-    --color: var(--hdbt-color-palette-button-contrast--primary);
-    --color-hover: var(--hdbt-color-palette-button--primary);
-    --color-focus: var(--hdbt-color-palette-button-contrast--primary);
-    --color-hover-focus: var(--hdbt-color-palette-button--primary);
-    --color-disabled: var(--color-black);
-    --focus-outline-color: var(--hdbt-color-palette-button--primary);
-    --submit-input-focus-gutter-color: var(--hdbt-color-palette-button-contrast--primary);
-  }
-
-  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='secondary'],
-  .hds-button--secondary {
-    --background-color: transparent;
-    --background-color-hover: var(--hdbt-color-palette-button--primary);
-    --background-color-focus: transparent;
-    --background-color-hover-focus: var(--hdbt-color-palette-button--primary);
-    --background-color-disabled: transparent;
-    --border-color: var(--hdbt-color-palette-button--primary);
-    --border-color-hover: var(--hdbt-color-palette-button--primary);
-    --border-color-focus: var(--hdbt-color-palette-button--primary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--primary);
-    --border-color-disabled: var(--hdbt-color-palette-button--primary);
-    --color: var(--hdbt-color-palette-button--primary);
-    --color-hover: var(--hdbt-color-palette-button-contrast--primary);
-    --color-focus: var(--hdbt-color-palette-button--primary);
-    --color-hover-focus: var(--hdbt-color-palette-button-contrast--primary);
-    --focus-outline-color: var(--hdbt-color-palette-button--primary);
-  }
-
-  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='supplementary'],
-  .hds-button--supplementary {
-    --background-color: transparent;
-    --background-color-hover: transparent;
-    --background-color-focus: transparent;
-    --background-color-hover-focus: transparent;
-    --background-color-disabled: transparent;
-    --border-color: transparent;
-    --border-color-hover: transparent;
-    --border-color-focus: var(--hdbt-color-palette-button--primary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--primary);
-    --border-color-disabled: transparent;
-    --color: var(--hdbt-color-palette-button--primary);
-    --color-hover: var(--hdbt-color-palette-button--primary);
-    --color-focus: var(--hdbt-color-palette-button--primary);
-    --color-hover-focus: var(--hdbt-color-palette-button--primary);
-    --color-disabled: var(--hdbt-color-palette-button--primary);
-    --focus-outline-color: transparent;
-    --submit-input-focus-gutter-color: transparent;
-  }
+  @include button-palettes('primary');
 }
 
 .component--banner-secondary .component__container {
@@ -173,65 +113,5 @@ a.banner__button {
     --hdbt-default-link-color: var(--hdbt-color-palette-text--secondary);
   }
 
-  [data-hds-component='button']:not([class*='hds-button'],[data-hds-variant]),
-  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='primary'],
-  .hds-button--primary {
-    --background-color: var(--hdbt-color-palette-button--secondary);
-    --background-color-hover: transparent;
-    --background-color-focus: var(--hdbt-color-palette-button--secondary);
-    --background-color-hover-focus: transparent;
-    --background-color-disabled: var(--color-black-20);
-    --border-color: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover: var(--hdbt-color-palette-button--secondary);
-    --border-color-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-disabled: var(--color-black-20);
-    --color: var(--hdbt-color-palette-button-contrast--secondary);
-    --color-hover: var(--hdbt-color-palette-button--secondary);
-    --color-focus: var(--hdbt-color-palette-button-contrast--secondary);
-    --color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --color-disabled: var(--color-black);
-    --focus-outline-color: var(--hdbt-color-palette-button--secondary);
-    --submit-input-focus-gutter-color: var(--hdbt-color-palette-button-contrast--secondary);
-  }
-
-  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='secondary'],
-  .hds-button--secondary {
-    --background-color: transparent;
-    --background-color-hover: var(--hdbt-color-palette-button--secondary);
-    --background-color-focus: transparent;
-    --background-color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --background-color-disabled: transparent;
-    --border-color: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover: var(--hdbt-color-palette-button--secondary);
-    --border-color-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-disabled: var(--hdbt-color-palette-button--secondary);
-    --color: var(--hdbt-color-palette-button--secondary);
-    --color-hover: var(--hdbt-color-palette-button-contrast--secondary);
-    --color-focus: var(--hdbt-color-palette-button--secondary);
-    --color-hover-focus: var(--hdbt-color-palette-button-contrast--secondary);
-    --focus-outline-color: var(--hdbt-color-palette-button--secondary);
-  }
-
-  [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='supplementary'],
-  .hds-button--supplementary {
-    --background-color: transparent;
-    --background-color-hover: transparent;
-    --background-color-focus: transparent;
-    --background-color-hover-focus: transparent;
-    --background-color-disabled: transparent;
-    --border-color: transparent;
-    --border-color-hover: transparent;
-    --border-color-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --border-color-disabled: transparent;
-    --color: var(--hdbt-color-palette-button--secondary);
-    --color-hover: var(--hdbt-color-palette-button--secondary);
-    --color-focus: var(--hdbt-color-palette-button--secondary);
-    --color-hover-focus: var(--hdbt-color-palette-button--secondary);
-    --color-disabled: var(--hdbt-color-palette-button--secondary);
-    --focus-outline-color: transparent;
-    --submit-input-focus-gutter-color: transparent;
-  }
+  @include button-palettes('secondary');
 }
