UHF-9050: Add new button support to everywhere

--- a/src/scss/02_mixins/_color_helpers.scss
+++ b/src/scss/02_mixins/_color_helpers.scss
@@ -7,7 +7,7 @@
     $theme: 'primary';
   }
 
-  [data-hds-component='button']:not([class*='hds-button'],[data-hds-variant]),
+  [data-hds-component='button']:not([class*='hds-button'],[data-hds-variant]), // When variant is not defined, we fallback to primary styles
   [data-hds-component='button']:not([class*='hds-button'])[data-hds-variant='primary'],
   .hds-button--primary {
     --background-color: var(--hdbt-color-palette-button--#{$theme});
