--- a/src/scss/06_components/pages/_cookie-compliance.scss
+++ b/src/scss/06_components/pages/_cookie-compliance.scss
@@ -120,6 +120,7 @@
       }
     }
 
+    [data-hds-component='button']:not([class*='hds-button']),
     .hds-button {
       @include hds-button-colors-on-light-bg;
       margin-top: $spacing;
@@ -150,6 +151,7 @@
   .message {
     background-color: $color-black;
 
+    [data-hds-component='button']:not([class*='hds-button']),
     .hds-button {
       @include hds-button-colors-on-dark-bg;
     }
