--- a/src/scss/06_components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/06_components/paragraphs/_liftup-with-image.scss
@@ -90,6 +90,7 @@ $breakpoint-design-image-on-left-right: 830px;
       min-height: 435px; // According to layouts
     }
 
+    [data-hds-component='button']:not([class*='hds-button']),
     .hds-button {
       @include font('button');
     }
