--- a/src/scss/06_components/paragraphs/_remote-video.scss
+++ b/src/scss/06_components/paragraphs/_remote-video.scss
@@ -17,7 +17,10 @@
 }
 
 .component--remote-video,
-.component--remote-video a:not(.hds-button) {
+.component--remote-video a:not(
+  .hds-button,
+  [data-hds-component='button']:not([class*='hds-button'])
+) {
   color: $color-white;
 }
 
