UHF-8509: Update table styles to match with the layouts, adjusting ckeditor styles so that the tables are show with correct styles in the editor

--- a/src/scss/01_variables/_constraint_variables.scss
+++ b/src/scss/01_variables/_constraint_variables.scss
@@ -9,6 +9,7 @@ $gutter: 16px;
 $spacing: $gutter; // 16px
 $spacing-quarter: $spacing * 0.25; // 4px
 $spacing-half: $spacing * 0.5; // 8px
+$spacing-three-quarters: $spacing * 0.75; // 12px
 $spacing-and-half: $spacing * 1.5; // 24px
 $spacing-double: $spacing * 2; // 32px
 $spacing-triple: $spacing * 3; // 48px
