--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -68,32 +68,46 @@
 }
 
 // 04_elements/_table.scss
-// TODO The table is a mess because of source order in table.
 .ck-editor .ck-content {
   @import '04_elements/_table';
-}
 
-// hdbt_admin overrides for table styles.
-.hdbt-admin .paragraphs-tabs-wrapper .ck-editor .ck-content figure.table table tbody {
-  tr td,
-  tr th {
-    border: 0;
-    padding: $spacing;
+  // CKEditor and Gin styling overrides. These are quite nasty but so are the styles automatically set by
+  // the Gin-theme and CKEditor-module.
+
+  // CKEditor sets a background color and padding for the figcaption and aligns the text to center.
+  // These lines change the layout similar to what we have on the layout.
+  .table > figcaption {
+    background-color: transparent;
+    padding: 0;
+    text-align: left;
   }
 
-  // Row border-color.
-  tr:not(:last-of-type) {
-    td {
-      border-bottom: 1px solid $color-black-10;
+  // CKEditor sets border styles for the tables. Changing that to the design we have.
+  .table table {
+    border: 2px solid $color-black-50;
+
+    // Gin sets this after element for .field-multiple-table thead element but because of the selectors
+    // inaccuracy it also is visible on the editor. Hiding it with this.
+    thead::after {
+      display: none;
+    }
+
+    // Gin sets all th-elements to small font size for some reason with very inaccurate selector so we need
+    // to change the font-size here. Also CKEditor sets background color for the th-element which is not the
+    // right for our design so changing it here.
+    th {
+      background-color: $color-black-10;
+      font-size: remify(18px);
+    }
+
+    // CKEditor adds paddings and borders for td- and th-elements so changing them to correct here.
+    td,
+    th {
+      border: 0;
+      padding: $spacing-three-quarters $spacing-and-half;
     }
   }
 }
-
-.hdbt-admin .paragraphs-tabs-wrapper .ck-editor .ck-content figure.table table thead tr th,
-.hdbt-admin .paragraphs-tabs-wrapper .ck-editor .ck-content figure.table table tbody tr th {
-  border: 0;
-}
-
 
 // hds-button styles for CKEditor. These are copied from the old CKEditor stylesheet so not sure if they are still
 // usable/needed when the new version is created.
