UHF-9050: Add dist

--- a/src/scss/06_components/pages/_service-channel.scss
+++ b/src/scss/06_components/pages/_service-channel.scss
@@ -48,6 +48,10 @@
   font-weight: 500;
 }
 
+.service-channel--printable_form .service-channel__link::after {
+  @include pseudo-icon('printableform', calc(var(--line-height) * 1em), currentColor, inline-block);
+}
+
 .service-channel__address {
   .address > span {
     display: block;
