--- a/src/scss/06_components/paragraphs/_service-list.scss
+++ b/src/scss/06_components/paragraphs/_service-list.scss
@@ -113,6 +113,7 @@
 }
 
 .component--service-list-search {
+  @include component-side-padding;
   background-color: $color-silver-light;
 
   .component__container {
