--- a/templates/media/media--remote-video.html.twig
+++ b/templates/media/media--remote-video.html.twig
@@ -52,7 +52,7 @@
           'src': media_attributes.src,
           'height': media_attributes.height,
           'width': media_attributes.width,
-          'title': iframe_title,
+          'title': 'Video: ' ~ iframe_title,
           'type': 'video',
         }
       }
