--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -554,7 +554,8 @@ p > a.hds-button.hds-button--supplementary:first-child {
 // ---------------------------------------------------------------------------------------------------------------------
 // Button v2
 
-[data-hds-component='button']:not([class*='hds-button']) {
+[data-hds-component='button']:not(a,[class*='hds-button']),
+a[href][data-hds-component='button']:not([class*='hds-button']) {
   @include font('button');
 
   --border-width: 2px;
