UHF-9113: Added user-edited-content class to EU Cookie compliance block.

--- a/templates/block/block--eucookiecomplianceblock.html.twig
+++ b/templates/block/block--eucookiecomplianceblock.html.twig
@@ -21,7 +21,7 @@
         'component--cookie-compliance',
         'component--simulated',
       ],
-      component_content_class: 'cookie-compliance-block',
+      component_content_class: 'cookie-compliance-block user-edited-content',
     }
   %}
     {% block component_content %}
@@ -32,4 +32,3 @@
   {% endembed %}
   </div>
 {% endif %}
-
